--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "newton.mod/newton-dynamics"]
 	path = newton.mod/newton-dynamics
 	url = https://github.com/MADEAPPS/newton-dynamics.git
+[submodule "pthreads2.mod/pthreads"]
+	path = pthreads2.mod/pthreads
+	url = https://github.com/coapp-packages/pthreads.git
